--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Day 39 & 40 Project (Flight Deal Finder & Flight Club) main/flight_search.py
 Day 39 & 40 Project (Flight Deal Finder & Flight Club) main/main.py
 Day 39 & 40 Project (Flight Deal Finder & Flight Club) main/notification_manager.py
 *.pyc
+test.py
